[metadata]
name = stickcordify
version = 0.0.1
author = Aardvark
author_email = behemothblazars@gmail.com
description = A small utility to convert images to Discord's sticker format
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/aardvarktica/stickcordify
project_urls =
    Bug Tracker = https://github.com/aardvarktica/stickcordify/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
packages = find: